# nba_video_generator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/: make_videos_example.ipynb
src/nba_video_generator/: beta_search.py  search.py
src/nba_video_generator/ffmpeg-2025-10-21-git-535d4047d3-essentials_build/: README.txt
src/nba_video_generator/ffmpeg-2025-10-21-git-535d4047d3-essentials_build/doc/: ffmpeg-all.html  ffmpeg-filters.html  ffmpeg-formats.html  ffplay-all.html  ffprobe-all.html
src/nba_video_generator/src/: download_plays_beta.py  get_box_scores.py  get_pbp_beta.py  get_player_urls.py  get_plays_beta.py  get_videos.py  make_videos.ipynb  write_plays_beta.py
